--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <strong>About Me</strong>
       </h2>
       <p>
-        <img src="img/NickLyman.jpg" class="img-responsive" alt="Photo of      Nick Lyman">
+        <img src="img/NickLyman.jpg" class="img-responsive" alt="Photo of Nick Lyman">
         I am originally from Montana, growing up in a tiny town of 200 people, before moving to Bozeman and attending Montana State University. I graduated with a degree in Geography and specialized in Geographic Information Systems (GIS) and Remote Sensing. I chose this field because I always loved maps and loved to travel. After graduation and some traveling, I ended up in Portland, Oregon, and got a job using remote sensing for classifying land cover.  After several years at that job, I got itchy feet and decided that remote sensing wasn't what I wanted to continue doing. My wife and I decided to follow our desire to travel and left for 6 months, spending a month in Argentina, a month in Chile, and 4 months driving around the United States. Once we returned to Portland, I decided to find work in the GIS field, and ended up at Ecotrust working as a GIS Analyst. After 7 years, I knew that I didn't want to continue in the GIS world as a career either and decided to pursue my interest in software development, which led me to Epicodus.  We are in the final day of our first week and it has been an incredible experience so far! Below, you can find out more information about what I have learned and worked on during this past week, plus more information on my decision to transition to software development as a career.
       </p>
     </div>
@@ -37,6 +37,12 @@
         <li>Relaxing</li>
         <span class="excite"><li>Learning to write code!</li></span>
       </ul>
+    </div>
+    <div class="why-code">
+      <h2>
+        <strong>Why I Want to Code</strong>
+      </h2>
+      <p>The photos below show some of the places that I have been fortunate to travel to, spend time at, and I hope to be able to visit more parts of our world. The career of software developers offers more locational flexibility than any aspect of my previous careers. That reason alone is only part of my decision to change careers, the other is that I am genuinely interested in software and using it to hopefully help make positive changes to our planet.</p>
     </div>
     <div id="myCarousel" class="carousel slide">
       <ol class="carousel-indicators">
@@ -72,17 +78,17 @@
           </div>
         </div>
         <div class="item">
-          <img src="img/costarica.jpg" alt="Photo of beach at Manuel Antonio National Park in Costa Rica">
+          <img src="img/costarica.jpg" alt="Photo of Manuel Antonio National Park in Costa Rica">
           <div class="carousel-caption">
             <h3>Costa Rica</h3>
-            <p>"A photo of the beach at Manuel Antonio National Park in Costa Rica"</p>
+            <p>"A photo of Manuel Antonio National Park in Costa Rica"</p>
           </div>
         </div>
         <div class="item">
           <img src="img/valparaiso.jpg" alt="Photo of Valparaiso, Chile, overlooking the Pacific Ocean">
           <div class="carousel-caption">
             <h3>Valparaiso, Chile</h3>
-            <p>"A great city, reminding me of the San Francisco of South America"</p>
+            <p>"A great city, reminiscent of San Francisco"</p>
           </div>
         </div>
         <div class="item">
@@ -107,11 +113,11 @@
           </div>
         </div>
         <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-cheveron-left" aria-hidden="true"></span>
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
         <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-cheveron-right" aria-hidden="true"></span>
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
       </div>
