Added box model

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     </div>
     <div class="why-code">
       <h2>
-        <strong>Why I Want to Code</strong>
+        <strong>Two Reasons I Want to Learn to Code</strong>
       </h2>
       <p>The photos below show some of the places that I have been fortunate to travel to, spend time at, and I hope to be able to visit more parts of our world. The career of software developers offers more locational flexibility than any aspect of my previous careers. That reason alone is only part of my decision to change careers, the other is that I am genuinely interested in software and using it to hopefully help make positive changes to our planet.</p>
     </div>
