Added box model elements, starting to add row and column elements

--- a/portfolio.html
+++ b/portfolio.html
@@ -122,6 +122,18 @@
         </a>
       </div>
     </div>
+    <div class="repository">
+      <h2><strong><em>My Github Repository Portfolio From Week One at Epicodus!!!</strong></em></h2>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <h3>Vacation</h3>
+        <p>This was my first attempt using Bootstrap in conjunction with HTML and CSS</p>
+        <p>
+          <a class="btn" href="https://github.com/nicklyman/vacation.git">Go to repository</a>
+        </p>
+      </div>
+    </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
