--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
       </h2>
       <p>
         <img src="img/NickLyman.jpg" class="img-responsive" alt="Photo of Nick Lyman">
-        I am originally from Montana, growing up in a tiny town of 200 people, before moving to Bozeman and attending Montana State University. I graduated with a degree in Geography and specialized in Geographic Information Systems (GIS) and Remote Sensing. I chose this field because I always loved maps and loved to travel. After graduation and some traveling, I ended up in Portland, Oregon, and got a job using remote sensing for classifying land cover.  After several years at that job, I got itchy feet and decided that remote sensing wasn't what I wanted to continue doing. My wife and I decided to follow our desire to travel and left for 6 months, spending a month in Argentina, a month in Chile, and 4 months driving around the United States. Once we returned to Portland, I decided to find work in the GIS field, and ended up at Ecotrust working as a GIS Analyst. After 7 years, I knew that I didn't want to continue in the GIS world as a career either and decided to pursue my interest in software development, which led me to Epicodus.  We are in the final day of our first week and it has been an incredible experience so far! Below, you can find out more information about what I have learned and worked on during this past week, plus more information on my decision to transition to software development as a career.
+        I am originally from Montana, growing up in a tiny town of 200 people, before moving to Bozeman and attending Montana State University. I graduated with a degree in Geography and specialized in Geographic Information Systems (GIS) and Remote Sensing. I chose this field because I always loved maps and loved to travel. After graduation and some traveling, I ended up in Portland, Oregon, and got a job using remote sensing for classifying land cover.  After several years at that job, I got itchy feet and decided that remote sensing wasn't what I wanted to continue doing. My wife and I decided to follow our dream to travel and left for 6 months, spending a month in Argentina, a month in Chile, and 4 months driving around the United States. Once we returned to Portland, I decided to find work in the GIS field and ended up at Ecotrust working as a GIS Analyst. After 7 years, I came to the conclusion that GIS wasn't the right path for me either and decided to pursue my interest in software development, which led me to Epicodus.  Right now, we are in the final day of our first week and it has been an incredible experience so far! Below, you can find more details about what I have learned and worked on during this past week, a few thoughts regarding my decision to transition to software development as a career, and some pictures that have only strengthened my desire to continue exploring.
       </p>
     </div>
     <div class="interests">
@@ -29,13 +29,13 @@
         <strong>My Interests</strong>
       </h2>
       <ul class="center">
-        <li>Traveling near and far</li>
+        <li>Travelling</li>
         <li>Mountain biking</li>
         <li>Skiing</li>
         <li>Walking</li>
         <li>Drinking coffee</li>
         <li>Relaxing</li>
-        <span class="excite"><li>Learning to write code!</li></span>
+        <span class="excite"><li>WRITING CODE!</li></span>
       </ul>
     </div>
     <div class="why-code">
@@ -123,14 +123,28 @@
       </div>
     </div>
     <div class="repository">
-      <h2><strong><em>My Github Repository Portfolio From Week One at Epicodus!!!</strong></em></h2>
+      <p><strong><em>My Github Repository Portfolio From Week One at Epicodus!!!</strong></em></p>
     </div>
     <div class="row">
       <div class="col-md-4">
-        <h3>Vacation</h3>
-        <p>This was my first attempt using Bootstrap in conjunction with HTML and CSS</p>
+        <h3>First Day of Class</h3>
+        <p>This was my first website, created using HTML and later updated with CSS. It gives an overview of what we learned prior to lunch on Day 1!</p>
         <p>
-          <a class="btn" href="https://github.com/nicklyman/vacation.git">Go to repository</a>
+          <a class="btn" href="https://github.com/nicklyman/first-day-of-class.git">Go to repository</a>
+        </p>
+      </div>
+      <div class="col-md-4">
+        <h3>Island Resort</h3>
+        <p>This website used multiple .html files for linking on the main page.  Imagery and CSS were also used for promoting an island resort for a wealthy business person.</p>
+        <p>
+          <a class="btn" href="https://github.com/nicklyman/island-resort.git">Go to repository</a>
+        </p>
+      </div>
+      <div class="col-md-4">
+        <h3>Cupcake</h3>
+        <p>This is a simple website with pictures of cupcakes designed to make people hungry. After making this site, it took all of my strength to not get a cupcake for lunch!</p>
+        <p>
+          <a class="btn" href="https://github.com/nicklyman/cupcake.git">Go to repository</a>
         </p>
       </div>
     </div>
