Made final edits to index.html, why.html, and repo.html

--- a/repo.html
+++ b/repo.html
@@ -36,6 +36,29 @@
           </p>
         </div>
         <div class="col-md-4">
+          <h3>Vacation</h3>
+          <p>This website used Bootstrap for incorporating jumbotron, header, columns, and nav tabs.</p>
+          <p>
+            <a class="btn" href="https://github.com/nicklyman/vacation.git">Go to repository</a>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <h3>Resume</h3>
+          <p>This website was created using divs and spans within HTML and CSS.</p>
+          <p>
+            <a class="btn" href="https://github.com/nicklyman/resume.git">Go to repository</a>
+          </p>
+        </div>
+        <div class="col-md-4">
+          <h3>Wikipedia-Rebuild</h3>
+          <p>This website used Bootstrap tools for replicating the Wikipedia homepage.</p>
+          <p>
+            <a class="btn" href="https://github.com/nicklyman/wikipedia-rebuild.git">Go to repository</a>
+          </p>
+        </div>
+        <div class="col-md-4">
           <h3>Cupcake</h3>
           <p>This is a simple website with pictures of cupcakes designed to make people hungry. After making this site, it took all of my strength to not get a cupcake for lunch!</p>
           <p>
