--- a/why.html
+++ b/why.html
@@ -21,7 +21,7 @@
         <h2>
           <strong>Two Reasons I Want to Learn to Code</strong>
         </h2>
-        <p>The photos below show some of the places that I have been fortunate to travel to, spend time at, and I hope to be able to visit more parts of our world. The career of software developers offers more locational flexibility than any aspect of my previous careers. That reason alone is only part of my decision to change careers, the other is that I am genuinely interested in software and using it to hopefully help make positive changes to our planet.</p>
+        <p>The photos below show some of the places that I have been fortunate to travel to, spend time at, and I hope to be able to visit more parts of our world. The career of software developers offers more locational flexibility than either of my previous careers in GIS and remote sensing. That reason alone is one part of my decision to change careers, the other is that I am genuinely interested in software and it's potential to help make positive changes to our planet.</p>
       </div>
       <div id="myCarousel" class="carousel slide">
         <ol class="carousel-indicators">
@@ -103,6 +103,7 @@
       </div>
       <div class="nomad">
         <img src="img/nomad.jpg" class="img-responsive" alt="A digital nomad working at the beach">
+      </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
