Fixed 2 errors, .jpg changed to .JPGbecause images weren't loading.

--- a/why.html
+++ b/why.html
@@ -78,14 +78,14 @@
             </div>
           </div>
           <div class="item">
-            <img src="img/sarajevo.jpg" alt="Photo of Sarajevo in Bosnia and Herzegovina">
+            <img src="img/sarajevo.JPG" alt="Photo of Sarajevo in Bosnia and Herzegovina">
             <div class="carousel-caption">
               <h3>Sarajevo</h3>
               <p>"Sarajevo is an incredible city with an amazing culture and history"</p>
             </div>
           </div>
           <div class="item">
-            <img src="img/perast.jpg" alt="Photo of Perast in the Bay of Kotor region of Montenegro">
+            <img src="img/perast.JPG" alt="Photo of Perast in the Bay of Kotor region of Montenegro">
             <div class="carousel-caption">
               <h3>Perast</h3>
               <p>"Perast hangs on the wall of a steep slope that falls into the Bay of Kotor in Montenegro"</p>
